--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bfx-api-node-rest",
-  "version": "6.0.0",
+  "version": "7.0.0",
   "description": "Official Bitfinex REST v1 & v2 API interfaces",
   "engines": {
     "node": ">=8.3.0"
@@ -46,7 +46,7 @@
     "url": "https://github.com/bitfinexcom/bfx-api-node-rest/issues"
   },
   "devDependencies": {
-    "bfx-api-mock-srv": "^1.6.0",
+    "bfx-api-mock-srv": "2.0.0",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "docdash": "^2.0.2",
